Implementation JSTL et filtre

--- a/pizzeria-app/boris-pizzeria-admin-web/src/main/webapp/css/style.css
+++ b/pizzeria-app/boris-pizzeria-admin-web/src/main/webapp/css/style.css
@@ -100,3 +100,9 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+.page-header {
+	padding-bottom: 9px;
+  	margin: 40px 0 20px;
+  	border-bottom: 1px solid #eeeeee;
+}
